--- a/resume.css
+++ b/resume.css
@@ -6,19 +6,21 @@
 }
 
 body {
-    background-color: #f5f5f5;
+    background: url(1.jpg);
     padding: 20px;
+    background-size: cover;
 }
 
 .container {
     width: 1000px;
     margin: 0 auto;
-    background-color: black;
-    color: white;
+    background-color: rgba(0, 0, 0, 0.5);
+    color: beige;
     padding: 70px;
     margin-top: 150px;
-    border-radius: 8px;
+    border-radius: 100px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    font-size: 30px;
 }
 
 .header {
@@ -35,10 +37,10 @@ body {
 }
 
 .upload-box {
-    border: 2px dashed #ccc;
+    border: 5px dashed #ccc;
     padding: 20px;
     text-align: center;
-    border-radius: 10px;
+    border-radius: 30px;
 }
 
 .upload-box.drag-over {
