--- a/login.css
+++ b/login.css
@@ -3,7 +3,8 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: #121212;
+    background: url(1.jpg);
+    background-size: cover;
     margin: 0;
 }
 
@@ -13,7 +14,7 @@ body {
     gap: 15px;
     width: 450px;
     padding: 2em;
-    background-color: #171717;
+    background-color: rgba(0, 0, 0, 0.5);
     border-radius: 15px;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
     text-align: center;
